# whisper-rs

./: Cargo.toml  Dockerfile  build.sh  cargo_config
examples/: api_server.rs  audio_transcription.rs
sys/: build.rs
