[workspace]
members = ["sys"]
exclude = ["examples/full_usage"]

[package]
name = "whisper-rs"
version = "0.10.1"
edition = "2021"
description = "Rust bindings for whisper.cpp"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs"
repository = "https://github.com/tazz4843/whisper-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs-sys = { path = "sys", version = "0.8" }

[dev-dependencies]
async-channel = "2.1.1"
axum = { version = "0.7.4", features = ["multipart", "ws", "http2"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
futures = "0.3.30"
hound = "3.5.0"
nanoid = "0.4.0"
sanitize-filename = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.0"
smart-default = "0.7.1"
snafu = "0.8.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = []

simd = []
coreml = ["whisper-rs-sys/coreml"]
cuda = ["whisper-rs-sys/cuda", "_gpu"]
opencl = ["whisper-rs-sys/opencl"]
openblas = ["whisper-rs-sys/openblas"]
metal = ["whisper-rs-sys/metal", "_gpu"]
_gpu = []
test-with-tiny-model = []

[package.metadata.docs.rs]
features = ["simd"]
